# audio-plugin-unity-web-ui

./: .gitignore  README.md
cpp/: .gitignore
cpp/audio_plugin/: CMakeLists.txt  CMakePresets.json  deno.json
cpp/audio_plugin/cmake/: Findjuce.cmake
cpp/audio_plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SinglePageBrowser.cpp  WebViewBackendComponent.cpp  WebViewBackendComponent.h
cpp/audio_plugin/tasks/deno/: build-plugin-debug.ts  build-webview-bundle.ts  configure-cmake.ts  get-webview2.ts
unity/project/: .gitignore
unity/project/Assets/Plugins/: plugin.jslib
unity/project/Assets/Scenes/: SampleScene.unity
unity/project/Assets/Scripts/: AudioPluginController.cs
unity/project/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity/project/ProjectSettings/: ProjectSettings.asset
web/: build-webview-bundle.ts
web/binding/: index.html  juce-binding-impl.js
web/binding/page/: index.html  unity-loader.js
webview/: build-webview-bundle.ts
webview/source/binding/: juce-binding-impl.js  unity-binding-lib.js
